third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/signer/misplaced_signer_arg.exp
script {
    entry fun <SELF>_0(_u: u64, _s: signer) {
        ()
    }
}

script {
    entry fun <SELF>_1(_u: u64, _s: signer, _u2: u64) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ misplaced_signer_arg.move:2:15
  │
2 │     entry fun <SELF>_0(_u: u64, _s: signer) {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
